--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "console": "integratedTerminal",
             "justMyCode": true,
             //"args": ["-c=orange2","-w=1","-d=1"]// "-v=Calibration-green4.mp4"  "-i=green2.jpg"
-            "args": ["-c=orange2","-v=putting10-fast.orange.mp4","-w=0"]// "-v=Calibration_1080p_True_60fps.mp4"  "-i=green2.jpg"  ,"-d=1"
+            "args": ["-c=orange2","-w=1","-d=1"]// "-v=Calibration_1080p_True_60fps.mp4"  "-i=green2.jpg"  ,"-d=1"
         }
     ]
 }
