add flip image / fix false fast putts

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,9 @@
 [putting]
-startx1 = 10
-startx2 = 180
-y1 = 180
-y2 = 450
+startx1 = 27
+startx2 = 174
+y1 = 249
+y2 = 403
 ballradius = 0
+radius = 0
+flip = 1
 
