--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,9 @@
 [putting]
-startx1 = 10
-startx2 = 180
-y1 = 180
-y2 = 450
+startx1 = 7
+startx2 = 110
+y1 = 218
+y2 = 365
 radius = 0
 flip = 0
+darkness = 0
+
