Add resize option and overwrite FPS

--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,12 @@
 [putting]
-startx1 = 68
-startx2 = 158
-y1 = 251
+startx1 = 228
+startx2 = 277
+y1 = 321
 y2 = 373
-radius = 0
+radius = 6
 flip = 0
-darkness = 0
+darkness = 44
 mjpeg = 1
-ps4 = 1
+ps4 = 0
+fps = 120
 
