--- a/config.ini
+++ b/config.ini
@@ -2,11 +2,13 @@
 startx1 = 10
 startx2 = 180
 y1 = 180
-y2 = 390
+y2 = 450
 radius = 0
 flip = 0
 darkness = 0
-mjpeg = 0
+mjpeg = 1
 ps4 = 0
 fps = 0
+height = 0
+width = 0
 
