initial replay commit

--- a/config.ini
+++ b/config.ini
@@ -5,10 +5,12 @@ y1 = 180
 y2 = 450
 radius = 0
 flip = 0
-darkness = 0
+darkness = 98
 mjpeg = 1
 ps4 = 0
 fps = 0
 height = 0
 width = 0
+replaycam = 0
+replaycamindex = 0
 
