add flipview, exposure and saturation save

--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,18 @@
 [putting]
-startx1 = 10
-startx2 = 180
-y1 = 180
-y2 = 450
+startx1 = 22
+startx2 = 178
+y1 = 179
+y2 = 324
 radius = 0
 flip = 0
 darkness = 0
 mjpeg = 1
-ps4 = 0
-fps = 0
+ps4 = 1
+fps = 100
 height = 0
 width = 0
+flipview = 1
+exposure = -1.0
+saturation = 0.0
+customhsv = {'hmin': 0, 'smin': 0, 'vmin': 75, 'hmax': 179, 'smax': 255, 'vmax': 255}
+
