add white balance

--- a/config.ini
+++ b/config.ini
@@ -1,21 +1,23 @@
 [putting]
-startx1 = 39
-startx2 = 143
-y1 = 179
-y2 = 324
-radius = 41
+startx1 = 109
+startx2 = 225
+y1 = 216
+y2 = 342
+radius = 39
 flip = 0
-darkness = 82
+darkness = 0
 mjpeg = 1
-ps4 = 1
-fps = 100
+ps4 = 0
+fps = 30
 height = 0
 width = 0
 flipview = 1
-exposure = -1.0
+exposure = -2.0
 saturation = 0.0
-customhsv = {'hmin': 0, 'smin': 0, 'vmin': 75, 'hmax': 179, 'smax': 255, 'vmax': 255}
+customhsv = {'hmin': 0, 'smin': 0, 'vmin': 116, 'hmax': 179, 'smax': 255, 'vmax': 255}
 replaycam = 0
 replaycamindex = 2
 replaycamps4 = 1
+whitebalanceblue = 2800.0
+whitebalancered = -1.0
 
