fix default config values

--- a/config.ini
+++ b/config.ini
@@ -1,18 +1,17 @@
 [putting]
-startx1 = 22
-startx2 = 178
-y1 = 194
-y2 = 324
+startx1 = 10
+startx2 = 180
+y1 = 180
+y2 = 450
 radius = 0
 flip = 0
 darkness = 0
 mjpeg = 1
-ps4 = 1
-fps = 100
+ps4 = 0
+fps = 0
 height = 0
 width = 0
-flipview = 1
-exposure = -1.0
-saturation = 0.0
-customhsv = {'hmin': 0, 'smin': 0, 'vmin': 75, 'hmax': 179, 'smax': 255, 'vmax': 255}
-
+flipview = 0
+replaycam = 0
+replaycamindex = 0
+replaycamps4 = 0
